--- a/app/src/main/res/layout/singlerow.xml
+++ b/app/src/main/res/layout/singlerow.xml
@@ -8,7 +8,7 @@
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="265dp"
         android:padding="15dp">
 
@@ -69,19 +69,19 @@
         <Button
             android:id="@+id/button232"
             android:layout_width="125dp"
-            android:layout_height="58dp"
+            android:layout_height="59dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="25dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="187dp"
-            android:layout_marginEnd="239dp"
-            android:layout_marginRight="239dp"
-            android:layout_marginBottom="6dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="173dp"
+            android:layout_marginEnd="198dp"
+            android:layout_marginRight="198dp"
+            android:layout_marginBottom="19dp"
             android:text="ezmen" />
 
 
