--- a/app/src/main/res/layout/singlerow.xml
+++ b/app/src/main/res/layout/singlerow.xml
@@ -39,25 +39,13 @@
             android:id="@+id/dest_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/from_text"
             android:layout_marginLeft="10dp"
             android:text="This is Email Name"
             android:textColor="#000"
             android:textSize="25sp" />
 
         <TextView
-            android:id="@+id/fromdate_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/from_text"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="34dp"
-            android:text="This is Email Name"
-            android:textColor="#000"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/todate_text"
+            android:id="@+id/date_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/from_text"
