--- a/app/src/main/res/layout/activity_addflight.xml
+++ b/app/src/main/res/layout/activity_addflight.xml
@@ -135,7 +135,10 @@
         android:id="@+id/addbutton"
         android:layout_width="229dp"
         android:layout_height="46dp"
-        android:text="Button"
+        android:text="Add"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:backgroundTint="#165A8F"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
