--- a/app/src/main/res/layout/activity_managerprofile.xml
+++ b/app/src/main/res/layout/activity_managerprofile.xml
@@ -8,41 +8,15 @@
 
     <TextView
         android:id="@+id/email_text"
-        android:layout_width="278dp"
-        android:layout_height="37dp"
+        android:layout_width="319dp"
+        android:layout_height="34dp"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.751"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.115" />
-
-    <EditText
-        android:id="@+id/name_text"
-        android:layout_width="204dp"
-        android:layout_height="32dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_text"
-        app:layout_constraintVertical_bias="0.02" />
-
-    <EditText
-        android:id="@+id/password_text"
-        android:layout_width="210dp"
-        android:layout_height="34dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/recycler_flights"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_text"
-        app:layout_constraintVertical_bias="0.833" />
+        app:layout_constraintVertical_bias="0.106" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_flights"
@@ -67,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045" />
+        app:layout_constraintVertical_bias="0.007" />
 
     <ImageButton
         android:id="@+id/back_button"
@@ -94,7 +68,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.879" />
+        app:layout_constraintVertical_bias="0.816" />
 
     <TextView
         android:id="@+id/textView3"
@@ -105,7 +79,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/name_text"
+        app:layout_constraintEnd_toStartOf="@+id/namechange"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -119,35 +93,57 @@
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/password_text"
-        app:layout_constraintEnd_toStartOf="@+id/password_text"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_flights"
+        app:layout_constraintEnd_toStartOf="@+id/passwordchange"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="95dp"
-        android:layout_height="42dp"
+        android:id="@+id/namechange"
+        android:layout_width="98dp"
+        android:layout_height="40dp"
         android:text="Change"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.968"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.181" />
+        app:layout_constraintVertical_bias="0.179" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/passwordchange"
         android:layout_width="98dp"
-        android:layout_height="43dp"
+        android:layout_height="40dp"
         android:text="Change"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.974"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.248" />
+        app:layout_constraintVertical_bias="0.241" />
+
+    <TextView
+        android:id="@+id/nametext"
+        android:layout_width="210dp"
+        android:layout_height="34dp"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_flights"
+        app:layout_constraintEnd_toStartOf="@+id/namechange"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/email_text"
+        app:layout_constraintVertical_bias="0.242" />
+
+    <TextView
+        android:id="@+id/passtext"
+        android:layout_width="210dp"
+        android:layout_height="34dp"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_flights"
+        app:layout_constraintEnd_toStartOf="@+id/passwordchange"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/nametext"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
