--- a/app/src/main/res/layout-v21/singlerow.xml
+++ b/app/src/main/res/layout-v21/singlerow.xml
@@ -8,76 +8,80 @@
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
-        android:layout_width="350dp"
-        android:layout_height="265dp"
+        android:layout_width="411dp"
+        android:layout_height="180dp"
         android:padding="15dp">
 
         <TextView
-            android:id="@+id/cost_text"
+            android:id="@+id/user_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:text="@string/this_is_demo_name"
             android:textColor="#000"
-            android:textSize="25sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/from_text"
+            android:id="@+id/user_name_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cost_text"
+            android:layout_below="@id/user_email"
+            android:layout_marginStart="10dp"
             android:text="@string/this_is_course_name"
             android:textColor="#000"
-            android:textSize="25sp"
-            android:layout_marginStart="10dp" />
+            android:textSize="18sp" />
 
 
         <TextView
-            android:id="@+id/dest_text"
+            android:id="@+id/user_password_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/from_text"
+            android:layout_below="@id/user_name_text"
             android:layout_marginStart="10dp"
             android:text="@string/this_is_email_name"
             android:textColor="#000"
-            android:textSize="25sp" />
+            android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/fromdate_text"
-            android:layout_width="match_parent"
+            android:id="@+id/confirm_text"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/from_text"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="34dp"
-            android:text="@string/this_is_email_name"
-            android:textColor="#000"
-            android:textSize="25sp" />
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="97dp"
+            android:layout_marginRight="97dp"
+            android:layout_marginBottom="17dp"
+            android:text="added to cart!"
+            android:textColor="#AFB42B"
+            android:textStyle="bold"
+            android:visibility="invisible" />
 
         <TextView
-            android:id="@+id/todate_text"
+            android:id="@+id/date_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/from_text"
+            android:layout_below="@id/user_name_text"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="23dp"
             android:text="@string/this_is_email_name"
             android:textColor="#000"
-            android:textSize="25sp" />
+            android:textSize="18sp" />
 
         <Button
-            android:id="@+id/button232"
-            android:layout_width="125dp"
-            android:layout_height="59dp"
+            android:id="@+id/edit_flight_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="173dp"
-            android:layout_marginEnd="198dp"
-            android:layout_marginBottom="19dp"
-            android:text="@string/buy" />
+            android:layout_marginStart="14dp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="100dp"
+            android:drawableLeft="@drawable/cart"
+            android:text="add to cart"
+            app:backgroundTint="#0288D1" />
 
 
     </RelativeLayout>
