--- a/app/src/main/res/layout/singlerow.xml
+++ b/app/src/main/res/layout/singlerow.xml
@@ -8,12 +8,12 @@
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="265dp"
         android:padding="15dp">
 
         <TextView
-            android:id="@+id/cost_text"
+            android:id="@+id/user_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -23,52 +23,43 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
+
         <TextView
-            android:id="@+id/from_text"
+            android:id="@+id/user_name_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cost_text"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="106dp"
             android:text="@string/this_is_course_name"
             android:textColor="#000"
-            android:textSize="25sp"
-            android:layout_marginStart="10dp" />
-
+            android:textSize="25sp" />
 
         <TextView
-            android:id="@+id/dest_text"
+            android:id="@+id/user_password_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/from_text"
+            android:layout_alignParentTop="true"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="51dp"
             android:text="This is Email Name"
             android:textColor="#000"
             android:textSize="25sp" />
 
         <TextView
-            android:id="@+id/fromdate_text"
+            android:id="@+id/date_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/from_text"
+            android:layout_alignParentTop="true"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="34dp"
-            android:text="This is Email Name"
-            android:textColor="#000"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/todate_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/from_text"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="146dp"
             android:text="This is Email Name"
             android:textColor="#000"
             android:textSize="25sp" />
 
         <Button
-            android:id="@+id/button232"
+            android:id="@+id/edit_flight_button"
             android:layout_width="125dp"
             android:layout_height="59dp"
             android:layout_alignParentStart="true"
