--- a/app/src/main/res/layout/activity_custlogin.xml
+++ b/app/src/main/res/layout/activity_custlogin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/sign"
+    android:background="@drawable/main"
     tools:context="com.example.flightsbookingapp.MainActivity">
 
     <EditText
