--- a/app/src/main/res/layout/activity_manager.xml
+++ b/app/src/main/res/layout/activity_manager.xml
@@ -63,7 +63,7 @@
         app:layout_constraintVertical_bias="0.401" />
 
     <Button
-        android:id="@+id/edit_flight_button"
+        android:id="@+id/cust_button"
         android:layout_width="270dp"
         android:layout_height="64dp"
         android:text="customers flights"
