--- a/app/src/main/res/layout/activity_managerregister.xml
+++ b/app/src/main/res/layout/activity_managerregister.xml
@@ -156,5 +156,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.683" />
 
+    <EditText
+        android:id="@+id/managers_pass"
+        android:layout_width="316dp"
+        android:layout_height="52dp"
+        android:ems="10"
+        android:hint="mangers password"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/signup_prog"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup_repassword" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
