--- a/app/src/main/res/layout/singlerow.xml
+++ b/app/src/main/res/layout/singlerow.xml
@@ -59,7 +59,7 @@
             android:textSize="25sp" />
 
         <Button
-            android:id="@+id/edit_flight_button"
+            android:id="@+id/cust_button"
             android:layout_width="125dp"
             android:layout_height="59dp"
             android:layout_alignParentStart="true"
