--- a/app/src/main/res/layout/singlerow_mang.xml
+++ b/app/src/main/res/layout/singlerow_mang.xml
@@ -55,7 +55,7 @@
             android:textSize="25sp" />
 
         <Button
-            android:id="@+id/edit_flight_button"
+            android:id="@+id/cust_button"
             android:layout_width="188dp"
             android:layout_height="63dp"
             android:layout_alignParentStart="true"
