--- a/app/src/main/res/layout/singlerow_user.xml
+++ b/app/src/main/res/layout/singlerow_user.xml
@@ -46,7 +46,7 @@
             android:textSize="18sp" />
 
         <Button
-            android:id="@+id/edit_flight_button"
+            android:id="@+id/cust_button"
             android:layout_width="108dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
